--- a/yuqiblog/posts/templates/posts/posts_detail.html
+++ b/yuqiblog/posts/templates/posts/posts_detail.html
@@ -67,7 +67,7 @@
 
             <hr>
             {% block content %}
-            <a class="btn btn-default" href="{% url 'add_comment_to_post' post.id%}">Add comment</a>
+            <a class="btn btn-primary" href="{% url 'add_comment_to_post' post.id%}">Add comment</a>
                   {% for comment in post.comments.all %}
                       {% if user.is_authenticated or comment.approved_comment %}
                       <div class="comment">
@@ -87,6 +87,16 @@
                   {% endfor %}
             {% endblock %}
             <hr>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <div id="disqus_thread"></div>
             <script>
 
