--- a/yuqiblog/sitepages/templates/sitepages/about.html
+++ b/yuqiblog/sitepages/templates/sitepages/about.html
@@ -27,19 +27,18 @@
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'about'%}">About me</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Experiences
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Recent work</a>
-                      <a class="dropdown-item" href="#">Research</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Fun fact!</a>
-                    </div>
-                  </li>
+
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'create'%}" tabindex="-1" aria-disabled="true">Add New Post</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'signup' %}" tabindex="-1" aria-disabled="true">Signup</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}" tabindex="-1" aria-disabled="true">Login</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'weather' %}" tabindex="-1" aria-disabled="true">Today's weather</a>
                   </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -49,11 +48,14 @@
               </div>
          </nav>
 
+          <br>
+          <br>
+          <br>
 
          <div class="container">
             <h1>About me</h1>
 
-            <h3>Introducation....</h3>
+            <h3></h3>
 
 
 
