add book scrapy

--- a/yuqiblog/books/templates/books/bestsellersamazon.html
+++ b/yuqiblog/books/templates/books/bestsellersamazon.html
@@ -51,48 +51,67 @@
               </div>
          </nav>
 
+        	<div class="jumbotron">
+        		<h1>Boring???</h1>
 
-         <div class="container">
+        		<form method="POST" action="{% url 'get_books' %}">
+        			{% csrf_token %}
+        			<button type="submit" class="btn btn-primary">Get books</button>
+        		</form>
 
-                    {% block content %}
+        	</div>
 
-                    <h1>Login</h1>
+        	<div class="container">
+        		<div class="row">
 
-                    {% if error %}
-                    {{ error }}
-                    <br />
-                    <br />
-                    {% endif %}
+        			<div class="text-center">
+        				{% if books %}
+        				<h3>Best Sellers in Books from Amazon</h3>
+        				<table class="table table-striped">
+        			    <thead>
+        			        <tr>
+        			            <th>Title</th>
+        			            <th>Author</th>
+        			            <th>Price</th>
+        			            <th>Link</th>
+        			        </tr>
+        			    </thead>
+        			    <tbody>
+        						{% for book in books %}
+        							<tr>
+        									<td>
+        									{{ book.title }}
+        									</td>
+        									<td>
+        									{{ book.author }}
+        									</td>
+        									<td>
+        									{{ book.price }}
+        									</td>
+        									<td>
+        									 <!-- <<a href=book.link></a>  ##make as links -->
+        									</td>
 
-                    <form method="POST" action="{% url 'login' %}">
-                      {% csrf_token %}
-
-                      {% if request.GET.next %}
-                      <input type="hidden" name="next" value={{ request.GET.next }} />
-                      {% endif %}
-
-                      Username:
-                      <br />
-                      <input type="text" name="username" />
-                      <br />
-                      Password:
-                      <br />
-                      <input type="password" name="password" />
-                      <br />
-                      <br />
-                      <input class="btn btn-primary" type="submit" value="Login">
-                    </form>
-
-                    {% endblock %}
+        		        {% endfor %}
+        						</tr>
+        				</tbody>
+        				</table>
+        				{% else %}
+        				<p> </p>
+        				{% endif %}
 
 
+        			</div>
 
-<div>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-</html>
+        		</div>
+        	</div>
+
+
+          <!-- Optional JavaScript -->
+          <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        </body>
+      </html>
