--- a/yuqiblog/posts/templates/posts/posts_detail.html
+++ b/yuqiblog/posts/templates/posts/posts_detail.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="{% url 'weather' %}" tabindex="-1" aria-disabled="true">Today's weather</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'book_spider' %}" tabindex="-1" aria-disabled="true">Get books</a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                   <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
